[package]
name = "json_diff_ng"
version = "0.6.0-RC3"
authors = ["ksceriath", "ChrisRega"]
edition = "2021"
license = "Unlicense"
description = "A JSON diff library and CLI."
readme = "README.md"
homepage = "https://github.com/ChrisRega/json-diff"
repository = "https://github.com/ChrisRega/json-diff"
keywords = ["cli", "diff", "json"]
categories = ["command-line-utilities"]

[lib]
name = "json_diff_ng"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "json_diff_ng"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
vg_errortools = "0.1"
serde_json = { version = "1.0", features = ["preserve_order"] }
maplit = "1.0"
clap = { version = "4.5", features = ["derive"] }
diffs = "0.5"
regex = "1.10"
